apps/wooco-spring/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wooco-spring
  labels:
    pod-security.kubernetes.io/enforce: "baseline"
    pod-security.kubernetes.io/enforce-version: "v1.33"
    pod-security.kubernetes.io/warn: "restricted"
    pod-security.kubernetes.io/audit: "restricted"
